source/stylesheets/components/_article.scss
.c-article {
  margin-bottom: 4 * $global-line-height;
  min-width: 0px;

  a:active {
    background-color: $primary-accent-color;
    color: white;
  }

  &__title {
    margin: 2 * $global-line-height 0;
    font-weight: 600;
    font-size: 3.5em;
    line-height: 1.2;
    transition: all .3s ease-in-out;

    @include bp-medium {
      font-size: 4em;
    }
  }

  &__image-wrapper {
    width: 100%;
    overflow: hidden;
  }

  &__image {
    width: 100%;
  }

  &__image-wrapper--restrained {
    @extend .c-article__image-wrapper;
    height: 200px;

    .c-article__image {
      display: block;
      position: relative;
      top: 50%;
      transform: translateY(-50%);
    }
  }

  &__body {
    line-height: 2;

    blockquote {
      margin: 0;
      padding: $global-line-height;
      font-style: italic;
      border-left: $global-line-height solid darken($color: $body-background-color, $amount: 20);
      background-color: $body-background-color;
    }

    ol,
    ul {
        font-size: 1.125rem;
        line-height: 2;
    }

    img {
      width: 100%;
    }

    h2 {
      font-size: 2.5em;
      line-height: 1;

      @include bp-medium {
        font-size: 3em;
      }
    }

    h3 {
      font-size: 2em;
      line-height: 1;

      @include bp-medium {
        font-size: 2.5em;
      }
    }

    h2, h3 {
      margin-top: 2* $global-line-height;
    }

  }

  &__body,
  &__excerpt {
    a {
      @extend .e-link--dotted;
      color: $primary-accent-color;
    }
  }

  &__tag {
    text-transform: uppercase;
    font-weight: bold;
    font-size: (12/14) * 1em;
    letter-spacing: .2em;
    color: $body-copy-color;
  }

  &__footer {
    font-family: $sans-serif-font;
    text-align: center;
    color: lighten($color: $body-copy-color, $amount: 40);
    font-size: (14/16) * 1em;
    &::before,
    &::after {
      content: "";
      display: block;
      width: 2 * $global-line-height;
      margin: $global-line-height auto;
      border-top: 2px solid $body-background-color;
    }
  }

  &__comments {
    margin-top: 4 * $global-line-height;
  }
}

